Edited wiki page through web user interface.
git-svn-id: http://lawu.googlecode.com/svn@40 56f80a26-1f45-11de-82b5-194b17410922

--- a/wiki/Rules.wiki
+++ b/wiki/Rules.wiki
@@ -1,5 +1,5 @@
 #summary They're more like guidelines
-#labels Featured Phase-Design Phase-Implementation
+#labels Featured,Phase-Design,Phase-Implementation
 
 This page lists the project "rules." Some of them are explicit coding practices whereas others are more abstract and philosophical in nature.
 
