Removed auto-generated code which wasn't compiling. Added package.html to all Java source directories. Creating self-extracting jar facilities.
git-svn-id: http://lawu.googlecode.com/svn@42 56f80a26-1f45-11de-82b5-194b17410922

--- a/trunk/AUTHORS
+++ b/trunk/AUTHORS
@@ -1,6 +1,7 @@
-This file lists the names of those who have contributed to this project.
+This file lists the names and e-mail addresses of those who have contributed
+to this project.
 
-Miorel-Lucian Palii
+  Miorel-Lucian Palii  <mlpalii@gmail.com>
 
 Not a very long list, is it? You can make it longer by joining the development
 team. (What team? It's only one person! Exactly, that's why you should join me
